@@ -29,7 +29,8 @@
 - updated: `NEWOPERATION()` supports `repeat`, `stop` and `binderror` arguments (more in docs)
 - updated: routing, now it supports operations in the form `ROUTE('..  * --> @save_operation @load_operation (response)')`
 - updated: `ROUTE()` supports multiple HTTP method declaration `ROUTE('GET,POST,PUT /something/', action)`
-- updated: `REQUEST()` can return binary data if the content-type is not `text/*` or `application/*`.
+- updated: `REQUEST()` can return binary data if the content-type is not `text/*` or `application/*`
+- updated: NoSQL joins support array values
 
 - fixed: a critical bug with storing uploaded files via `httpfile.fs()` or `httpfile.nosql()`
 - fixed: a critical bug with JavaScript minificator
